# EDITH_X

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_dummy_company.py  start_edith.bat
docs/superpowers/specs/: 2026-06-26-edith-x-design.md
edith_x/: __init__.py
edith_x/core/: config.py  container.py  interfaces.py
edith_x/demo/: ui.py
edith_x/interfaces/cli/: main.py
edith_x/interfaces/rest/: app.py
edith_x/interfaces/rest/static/: index.html
edith_x/modules/context/: service.py
edith_x/modules/execution/: service.py
edith_x/modules/gateway/: service.py
edith_x/modules/identity/: __init__.py  service.py
edith_x/modules/intent/: service.py
edith_x/modules/knowledge/: service.py
edith_x/modules/memory/: service.py
edith_x/modules/observability/: service.py
edith_x/modules/optimization/: service.py
edith_x/modules/planner/: service.py
edith_x/modules/policy/: service.py
edith_x/modules/reflection/: __init__.py  service.py
edith_x/modules/router/: service.py
edith_x/modules/verification/: __init__.py  service.py
