[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edith-x"
version = "0.1.0"
description = "EDITH-X: Enterprise Distributed Intelligence Token Handler — eXtended"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "dependency-injector>=4.41.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # AI / LLM
    "litellm>=1.55.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.57.0",

    # Observability
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
edith = "edith_x.interfaces.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["edith_x"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
